--- a/config/sensors_window.jsonc
+++ b/config/sensors_window.jsonc
@@ -187,114 +187,174 @@
 			"type": "graph",
 			"values": [
 				{
-					"field": "oreg.boardTemp1",
-					"name": "OReg Temp1",
-					"units": "C",
+					"field": "oreg.encoderAngle",
+					"name": "LOX Encoder Angle",
+					"units": "",
 					"color": [255, 0, 0]
 				},
 				{
-					"field": "oreg.boardTemp2",
-					"name": "OReg Temp2",
-					"units": "C",
-					"color": [0, 255, 0]
-				},
-				{
-					"field": "oreg.motorTemp",
-					"name": "OReg Mtr Tmp",
-					"units": "C",
-					"color": [0, 0, 255]
-				},
-				{
-					"field": "freg.boardTemp1",
-					"name": "FReg Temp1",
-					"units": "C",
+					"field": "oreg.angleSetpoint",
+					"name": "LOX Setpoint",
+					"units": "",
 					"color": [255, 0, 255]
 				},
 				{
-					"field": "freg.boardTemp2",
-					"name": "FReg Temp2",
-					"units": "C",
-					"color": [200, 200, 0]
-				},
-				{
-					"field": "freg.motorTemp",
-					"name": "FReg Mtr Tmp",
-					"units": "C",
+					"field": "freg.encoderAngle",
+					"name": "Fuel Encoder Angle",
+					"units": "",
 					"color": [0, 255, 255]
-				}
-			]
-		},
-		{
-			"type": "graph",
-			"values": [
-				{
-					"field": "lc.lcValue1",
-					"name": "LC 1",
-					"units": "lbs",
-					"color": [0, 255, 0]
 				},
 				{
-					"field": "lc.lcValue2",
-					"name": "LC 2",
-					"units": "lbs",
+					"field": "freg.angleSetpoint",
+					"name": "Fuel Setpoint",
+					"units": "",
 					"color": [0, 0, 255]
 				}
+				// {
+				// 	"field": "oreg.boardTemp1",
+				// 	"name": "OReg Temp1",
+				// 	"units": "C",
+				// 	"color": [255, 0, 0]
+				// },
+				// {
+				// 	"field": "oreg.boardTemp2",
+				// 	"name": "OReg Temp2",
+				// 	"units": "C",
+				// 	"color": [0, 255, 0]
+				// },
+				// {
+				// 	"field": "oreg.motorTemp",
+				// 	"name": "OReg Mtr Tmp",
+				// 	"units": "C",
+				// 	"color": [0, 0, 255]
+				// },
+				// {
+				// 	"field": "freg.boardTemp1",
+				// 	"name": "FReg Temp1",
+				// 	"units": "C",
+				// 	"color": [255, 0, 255]
+				// },
+				// {
+				// 	"field": "freg.boardTemp2",
+				// 	"name": "FReg Temp2",
+				// 	"units": "C",
+				// 	"color": [200, 200, 0]
+				// },
+				// {
+				// 	"field": "freg.motorTemp",
+				// 	"name": "FReg Mtr Tmp",
+				// 	"units": "C",
+				// 	"color": [0, 255, 255]
+				// }
 			]
 		},
 		{
 			"type": "graph",
 			"values": [
+				// {
+				// 	"field": "lc.lcValue1",
+				// 	"name": "LC 1",
+				// 	"units": "lbs",
+				// 	"color": [0, 255, 0]
+				// },
+				// {
+				// 	"field": "lc.lcValue2",
+				// 	"name": "LC 2",
+				// 	"units": "lbs",
+				// 	"color": [0, 0, 255]
+				// }
 				{
-					"field": "tc.tcValue6",
-					"name": "Engn TC 6",
-					"units": "C",
+					"field": "oreg.filteredUpstreamPressure1",
+					"name": "O-Reg Pressurant PT",
+					"units": "PSI",
 					"color": [255, 0, 0]
 				},
 				{
-					"field": "tc.tcValue1",
-					"name": "Engn TC 1",
-					"units": "C",
+					"field": "freg.filteredUpstreamPressure1",
+					"name": "F-Reg Pressurant PT",
+					"units": "PSI",
 					"color": [0, 255, 0]
-				},
-				{
-					"field": "tc.tcValue2",
-					"name": "Engn TC 2",
-					"units": "C",
-					"color": [0, 0, 255]
-				},
-				{
-					"field": "tc.tcValue3",
-					"name": "Engn TC 3",
-					"units": "C",
-					"color": [255, 0, 255]
-				},
-				{
-					"field": "tc.tcValue4",
-					"name": "Engn TC 4",
-					"units": "C",
-					"color": [200, 200, 0]
-				},
-				{
-					"field": "tc.tcValue5",
-					"name": "Engn TC 5",
-					"units": "C",
-					"color": [0, 255, 255]
 				}
 			]
 		},
 		{
 			"type": "graph",
 			"values": [
+				// {
+				// 	"field": "tc.tcValue6",
+				// 	"name": "Engn TC 6",
+				// 	"units": "C",
+				// 	"color": [255, 0, 0]
+				// },
+				// {
+				// 	"field": "tc.tcValue1",
+				// 	"name": "Engn TC 1",
+				// 	"units": "C",
+				// 	"color": [0, 255, 0]
+				// },
+				// {
+				// 	"field": "tc.tcValue2",
+				// 	"name": "Engn TC 2",
+				// 	"units": "C",
+				// 	"color": [0, 0, 255]
+				// },
+				// {
+				// 	"field": "tc.tcValue3",
+				// 	"name": "Engn TC 3",
+				// 	"units": "C",
+				// 	"color": [255, 0, 255]
+				// },
+				// {
+				// 	"field": "tc.tcValue4",
+				// 	"name": "Engn TC 4",
+				// 	"units": "C",
+				// 	"color": [200, 200, 0]
+				// },
+				// {
+				// 	"field": "tc.tcValue5",
+				// 	"name": "Engn TC 5",
+				// 	"units": "C",
+				// 	"color": [0, 255, 255]
+				// }
 				{
-					"field": "tc.tcValue6",
-					"name": "LOX Tank TC",
-					"units": "C",
+					"field": "oreg.filteredDownstreamPressure2",
+					"name": "LOX Pressure",
+					"units": "PSI",
 					"color": [255, 0, 0]
 				},
 				{
-					"field": "tc.tcValue7",
-					"name": "Fuel Tank TC",
-					"units": "C",
+					"field": "oreg.pressureSetpoint",
+					"name": "Setpoint",
+					"units": "PSI",
+					"color": [0, 255, 0]
+				}
+			]
+		},
+		{
+			"type": "graph",
+			"values": [
+				// {
+				// 	"field": "tc.tcValue6",
+				// 	"name": "LOX Tank TC",
+				// 	"units": "C",
+				// 	"color": [255, 0, 0]
+				// },
+				// {
+				// 	"field": "tc.tcValue7",
+				// 	"name": "Fuel Tank TC",
+				// 	"units": "C",
+				// 	"color": [0, 255, 0]
+				// }
+				{
+					"field": "freg.filteredDownstreamPressure2",
+					"name": "Fuel Pressure",
+					"units": "PSI",
+					"color": [255, 0, 0]
+				},
+				{
+					"field": "freg.pressureSetpoint",
+					"name": "Setpoint",
+					"units": "PSI",
 					"color": [0, 255, 0]
 				}
 			]
